fix dlg names of existing skills
refs #312,#448

--- a/mod/dlg/dmfi_universal.dlg.yml
+++ b/mod/dlg/dmfi_universal.dlg.yml
@@ -14419,7 +14419,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "\xDCberzeugen"
+        0: "Diplomatie"
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 358
     AnimLoop: {type: :byte, value: 0}
@@ -14564,7 +14564,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: Sagenkunde
+        0: Wissen
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 366
     AnimLoop: {type: :byte, value: 0}
@@ -15092,7 +15092,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "\xDCberzeugen"
+        0: "Diplomatie"
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 396
     AnimLoop: {type: :byte, value: 0}
@@ -15237,7 +15237,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: Sagenkunde
+        0: Wissen
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 404
     AnimLoop: {type: :byte, value: 0}
@@ -15765,7 +15765,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "\xDCberzeugen"
+        0: "Diplomatie"
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 434
     AnimLoop: {type: :byte, value: 0}
@@ -15910,7 +15910,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: Sagenkunde
+        0: Wissen
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 442
     AnimLoop: {type: :byte, value: 0}
@@ -16789,7 +16789,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "\xDCberzeugen"
+        0: "Diplomatie"
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 491
     AnimLoop: {type: :byte, value: 0}
@@ -16934,7 +16934,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: Sagenkunde
+        0: Wissen
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 499
     AnimLoop: {type: :byte, value: 0}
