dmfi dlg: fix typo in emote wand

--- a/mod/dlg/dmfi_universal.dlg.yml
+++ b/mod/dlg/dmfi_universal.dlg.yml
@@ -14419,7 +14419,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Diplomatie"
+        0: Diplomatie
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 358
     AnimLoop: {type: :byte, value: 0}
@@ -15092,7 +15092,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Diplomatie"
+        0: Diplomatie
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 396
     AnimLoop: {type: :byte, value: 0}
@@ -15765,7 +15765,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Diplomatie"
+        0: Diplomatie
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 434
     AnimLoop: {type: :byte, value: 0}
@@ -16789,7 +16789,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Diplomatie"
+        0: Diplomatie
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 491
     AnimLoop: {type: :byte, value: 0}
@@ -16900,7 +16900,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: "Schl\xF6ser \xF6ffnen"
+        0: "Schl\xF6sser \xF6ffnen"
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 497
     AnimLoop: {type: :byte, value: 0}
