dmfi dlg: rename falle anfertigen -> Profession
refs #448

--- a/mod/dlg/dmfi_universal.dlg.yml
+++ b/mod/dlg/dmfi_universal.dlg.yml
@@ -16525,7 +16525,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: Falle anfertigen
+        0: Profession
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 476
     AnimLoop: {type: :byte, value: 1}
