fix naming Profession -> Beruf in dmfi dlg
refs #448

--- a/mod/dlg/dmfi_universal.dlg.yml
+++ b/mod/dlg/dmfi_universal.dlg.yml
@@ -16574,7 +16574,7 @@ ReplyList:
     Text: 
       type: :cexolocstr
       value: 
-        0: Profession
+        0: Beruf
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 478
     AnimLoop: {type: :byte, value: 1}
