--- a/mod/area/gabel_schmiede.are.yml
+++ b/mod/area/gabel_schmiede.are.yml
@@ -12,17 +12,17 @@ Expansion_List:
   value: []
 
 Flags: {type: :dword, value: 1}
-FogClipDist: {type: :float, value: 100.0}
+FogClipDist: {type: :float, value: 45.0}
 Height: {type: :int, value: 3}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 1}
-LightingScheme: {type: :byte, value: 21}
+LightingScheme: {type: :byte, value: 12}
 LoadScreenID: {type: :word, value: 46}
 ModListenCheck: {type: :int, value: 0}
 ModSpotCheck: {type: :int, value: 0}
-MoonAmbientColor: {type: :dword, value: 0}
-MoonDiffuseColor: {type: :dword, value: 0}
-MoonFogAmount: {type: :byte, value: 10}
+MoonAmbientColor: {type: :dword, value: 3947580}
+MoonDiffuseColor: {type: :dword, value: 11184810}
+MoonFogAmount: {type: :byte, value: 5}
 MoonFogColor: {type: :dword, value: 0}
 MoonShadows: {type: :byte, value: 0}
 Name: 
@@ -53,70 +53,10 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 77}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 1}
-    Tile_Orientation: {type: :int, value: 0}
-    Tile_SrcLight1: {type: :byte, value: 3}
-    Tile_SrcLight2: {type: :byte, value: 3}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 1}
-    Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 121}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_MainLight1: {type: :byte, value: 30}
+    Tile_MainLight2: {type: :byte, value: 14}
     Tile_Orientation: {type: :int, value: 0}
-    Tile_SrcLight1: {type: :byte, value: 3}
-    Tile_SrcLight2: {type: :byte, value: 3}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 1}
-    Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 2}
-    Tile_SrcLight1: {type: :byte, value: 3}
-    Tile_SrcLight2: {type: :byte, value: 3}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 0}
-    Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 257}
-    Tile_MainLight1: {type: :byte, value: 1}
-    Tile_MainLight2: {type: :byte, value: 1}
-    Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 0}
-    Tile_SrcLight2: {type: :byte, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 0}
-    Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 258}
-    Tile_MainLight1: {type: :byte, value: 1}
-    Tile_MainLight2: {type: :byte, value: 1}
-    Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 0}
-    Tile_SrcLight2: {type: :byte, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 1}
-    Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 101}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -125,10 +65,10 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 2}
+    Tile_ID: {type: :int, value: 99}
     Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 2}
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -137,24 +77,12 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 121}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 3}
-    Tile_SrcLight2: {type: :byte, value: 3}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 1}
-    Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 94}
     Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
     Tile_Orientation: {type: :int, value: 2}
-    Tile_SrcLight1: {type: :byte, value: 3}
-    Tile_SrcLight2: {type: :byte, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
@@ -162,9 +90,57 @@ Tile_List:
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 94}
-    Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 1}
+    Tile_MainLight1: {type: :byte, value: 30}
+    Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 94}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 94}
+    Tile_MainLight1: {type: :byte, value: 30}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 70}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 111}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 2}
     Tile_SrcLight2: {type: :byte, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -173,12 +149,36 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 26}
-    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_ID: {type: :int, value: 295}
+    Tile_MainLight1: {type: :byte, value: 30}
     Tile_MainLight2: {type: :byte, value: 0}
     Tile_Orientation: {type: :int, value: 1}
     Tile_SrcLight1: {type: :byte, value: 3}
     Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 286}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 2}
+    Tile_SrcLight2: {type: :byte, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 122}
+    Tile_MainLight1: {type: :byte, value: 30}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 3}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
@@ -187,20 +187,32 @@ Tile_List:
     Tile_Height: {type: :int, value: 0}
     Tile_ID: {type: :int, value: 27}
     Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 2}
-    Tile_SrcLight2: {type: :byte, value: 2}
+    Tile_MainLight2: {type: :byte, value: 13}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
-    Tile_AnimLoop1: {type: :byte, value: 1}
-    Tile_AnimLoop2: {type: :byte, value: 1}
-    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
+    Tile_ID: {type: :int, value: 64}
+    Tile_MainLight1: {type: :byte, value: 30}
+    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 0}
+    Tile_AnimLoop2: {type: :byte, value: 0}
+    Tile_AnimLoop3: {type: :byte, value: 0}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 169}
     Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 1}
-    Tile_Orientation: {type: :int, value: 3}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 0}
     Tile_SrcLight1: {type: :byte, value: 3}
     Tile_SrcLight2: {type: :byte, value: 3}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -209,25 +221,49 @@ Tile_List:
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
+    Tile_ID: {type: :int, value: 77}
     Tile_MainLight1: {type: :byte, value: 0}
     Tile_MainLight2: {type: :byte, value: 0}
-    Tile_Orientation: {type: :int, value: 2}
-    Tile_SrcLight1: {type: :byte, value: 2}
-    Tile_SrcLight2: {type: :byte, value: 2}
+    Tile_Orientation: {type: :int, value: 1}
+    Tile_SrcLight1: {type: :byte, value: 0}
+    Tile_SrcLight2: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 1
     Tile_AnimLoop1: {type: :byte, value: 1}
     Tile_AnimLoop2: {type: :byte, value: 1}
     Tile_AnimLoop3: {type: :byte, value: 1}
     Tile_Height: {type: :int, value: 0}
-    Tile_ID: {type: :int, value: 94}
+    Tile_ID: {type: :int, value: 10}
     Tile_MainLight1: {type: :byte, value: 0}
-    Tile_MainLight2: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 13}
     Tile_Orientation: {type: :int, value: 1}
-    Tile_SrcLight1: {type: :byte, value: 2}
-    Tile_SrcLight2: {type: :byte, value: 2}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 173}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    Tile_AnimLoop1: {type: :byte, value: 1}
+    Tile_AnimLoop2: {type: :byte, value: 1}
+    Tile_AnimLoop3: {type: :byte, value: 1}
+    Tile_Height: {type: :int, value: 0}
+    Tile_ID: {type: :int, value: 26}
+    Tile_MainLight1: {type: :byte, value: 0}
+    Tile_MainLight2: {type: :byte, value: 14}
+    Tile_Orientation: {type: :int, value: 0}
+    Tile_SrcLight1: {type: :byte, value: 3}
+    Tile_SrcLight2: {type: :byte, value: 3}
 Tileset: {type: :resref, value: tin01}
 Version: {type: :dword, value: 0}
-Width: {type: :int, value: 5}
+Width: {type: :int, value: 6}
 WindPower: {type: :int, value: 0}
