fix AT transition Tempelruine Nord
refs #469

--- a/mod/area/gabelstr_nord_08.are.yml
+++ b/mod/area/gabelstr_nord_08.are.yml
@@ -43,7 +43,7 @@ SunDiffuseColor: {type: :dword, value: 14079702}
 SunFogAmount: {type: :byte, value: 7}
 SunFogColor: {type: :dword, value: 12303291}
 SunShadows: {type: :byte, value: 1}
-Tag: {type: :cexostr, value: nord_08}
+Tag: {type: :cexostr, value: gabelstr_nord_08}
 Tile_List: 
   type: :list
   value: 
