--- a/mod/area/gabelstr_nord_08.git.yml
+++ b/mod/area/gabelstr_nord_08.git.yml
@@ -44,14 +44,14 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: nord_triade_ruin_2_outdoor}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
       str_ref: 5349
-      value: {}
-
+      value: 
+        0: gabelstr_nord_08_2_temple
     Lockable: {type: :byte, value: 0}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
@@ -72,7 +72,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: StoneDoor}
+    Tag: {type: :cexostr, value: gabelstr_nord_08_2_temple}
     TemplateResRef: {type: :resref, value: nw_door_stone}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
