--- a/mod/area/area005.git.yml
+++ b/mod/area/area005.git.yml
@@ -1939,7 +1939,7 @@ Placeable List:
     OnSpellCastAt: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
     OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: univstore2_start}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 0}
     Plot: {type: :byte, value: 0}
@@ -1955,7 +1955,15 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    VarTable:
+      type: :list
+      value:
+      - !nwn-lib.elv.es,2008-12/struct
+        __struct_id: 0
+        Name: {type: :cexostr, value: store_tag}
+        Type: {type: :dword, value: 3}
+        Value: {type: :cexostr, value: "85901"}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 3.8438}
     Y: {type: :float, value: 4.8977}
